UI: Show titlebar on all dialogs
(integrated from master branch change 9.2.1-1254-g57ed834 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -49,7 +49,7 @@ dialog:root[hidechrome="true"]:not(.embedded)
 
 /* Dialogs with default chrome */
 
-.dialog:not([hidechrome="true"]):not(.embedded)
+.dialog:not([hidechrome="true"]):not(.embedded),
 dialog:not([hidechrome="true"]):not(.embedded)
 {
     padding: 6px;
