UI: Debug: Clean up debugging properties dialog
(integrated from master branch change 9.2.1-1255-g11904ce by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -426,3 +426,17 @@ checkbox#search-in-subdirs .checkbox-spacer-box
     .icon-arrow-right5();
     font-size: 16px;
 }
+
+/* Misc Buttons */
+
+.rightarrow-button > .button-internal-box
+{
+    .icon();
+    .icon-arrow-right5();
+    
+    & > image
+    {
+        visibility: collapse;
+        display: none;
+    }
+}
