--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?nnc3wm');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?nnc3wm#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?nnc3wm') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?nnc3wm') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?nnc3wm#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?j78b0o');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?j78b0o#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?j78b0o') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?j78b0o') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?j78b0o#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -671,6 +671,11 @@
         content: @icon-stop3;
     }
 }
+.icon-forward {
+    &:before {
+        content: @icon-forward;
+    }
+}
 .icon-plus-circle3 {
     &:before {
         content: @icon-plus-circle3;
@@ -749,6 +754,11 @@
 .icon-play-circle {
     &:before {
         content: @icon-play-circle;
+    }
+}
+.icon-pencil-square {
+    &:before {
+        content: @icon-pencil-square;
     }
 }
 .icon-external-link-square {
