--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -125,6 +125,7 @@
 @icon-text-width: "\f035";
 @icon-align-left2: "\f037";
 @icon-stop3: "\f04d";
+@icon-forward: "\f04e";
 @icon-plus-circle3: "\f055";
 @icon-minus-circle: "\f056";
 @icon-times-circle: "\f057";
@@ -141,6 +142,7 @@
 @icon-caret-up: "\f0d8";
 @icon-circle-o: "\f10c";
 @icon-play-circle: "\f144";
+@icon-pencil-square: "\f14b";
 @icon-external-link-square: "\f14c";
 @icon-trash: "\f1f8";
 @icon-display3: "\f26c";
