UI: Fix dynamic buttons not updating when switching skins
(integrated from master branch change 9.2.1-1282-g0b73fb7 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -235,6 +235,11 @@
         display: none;
     }
     
+    .dynamic-button[type="menu-button"]:before
+    {
+        content: none !important; /* Remove icon from main element, it's added to a sub element */
+    }
+    
     .dynamic-button.show-label .toolbarbutton-text[value]
     {
         display: inherit;
