UI: Use proper variables for colors
(integrated from master branch change 9.2.1-1303-g00d3650 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -124,8 +124,8 @@ menupopup
     menu[_moz-menuactive="true"],
     menuitem[_moz-menuactive="true"]
     {
-        background: @special !important;
-        color: @foreground !important;
+        background: @selected !important;
+        color: @selected-foreground !important;
     }
     
     & > menu,
@@ -579,8 +579,13 @@ button.unstyled
     
     &:hover
     {
-        background: @contrast-special;
+        background: @secondary-special;
         color: @foreground-special;
+        
+        label.button-text
+        {
+            color: @foreground-special;
+        }
     }
 }
 
