Icons: Update icon files so they reflect what's on IDE

--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -1,5 +1,9 @@
 @icomoon-font-path: "fonts";
 
+@icon-cordova: "\e903";
+@icon-phonegap: "\e904";
+@icon-gulp: "\e905";
+@icon-grunt: "\e906";
 @icon-menu4: "\e902";
 @icon-down-tiny: "\e901";
 @icon-markdown: "\e900";
