UI: Fix radio's not working on OSX
(integrated from master branch change 9.2.1-1305-g2563214 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -240,14 +240,13 @@ checkbox:not(.label-only)
 
 radio 
 {
-    .radio-spacer-box
+    .radio-label-box
     {
         .icon();
-        margin-right: 4px;
     }
     
-    &:not([selected="true"]) .radio-spacer-box { .icon-circle(); }
-    &[selected="true"] .radio-spacer-box { .icon-check-circle(); }
+    &:not([selected="true"]) .radio-label-box { .icon-circle(); }
+    &[selected="true"] .radio-label-box { .icon-check-circle(); }
 }
 
 treechildren::-moz-tree-image,
