--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -269,6 +269,14 @@ checkbox, radio
     -moz-box-align: center;
 }
 
+radio
+{
+    .radio-label
+    {
+        margin-left: 4px;
+    }
+}
+
 checkbox.label-only
 {
     &[checked="true"]
