--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -57,7 +57,7 @@ checkbox {
 }
 
 radio {
-  -moz-binding: url("chrome://global/skin/globalBindings.xml#radio-with-spacing");
+  -moz-binding: url("chrome://global/content/bindings/radio.xml#radio");
 }
 
 toolbarbutton:not([type="menu-button"]).dynamic-button,
