icons: add square up/down icon
(integrated from master branch change 8cabd97 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?j78b0o');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?j78b0o#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?j78b0o') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?j78b0o') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?j78b0o#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?al0ymq');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?al0ymq#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?al0ymq') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?al0ymq') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?al0ymq#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -764,6 +764,26 @@
 .icon-external-link-square {
     &:before {
         content: @icon-external-link-square;
+    }
+}
+.icon-caret-square-o-down {
+    &:before {
+        content: @icon-caret-square-o-down;
+    }
+}
+.icon-toggle-down {
+    &:before {
+        content: @icon-toggle-down;
+    }
+}
+.icon-caret-square-o-up {
+    &:before {
+        content: @icon-caret-square-o-up;
+    }
+}
+.icon-toggle-up {
+    &:before {
+        content: @icon-toggle-up;
     }
 }
 .icon-trash {
