--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -148,6 +148,10 @@
 @icon-play-circle: "\f144";
 @icon-pencil-square: "\f14b";
 @icon-external-link-square: "\f14c";
+@icon-caret-square-o-down: "\f150";
+@icon-toggle-down: "\f150";
+@icon-caret-square-o-up: "\f151";
+@icon-toggle-up: "\f151";
 @icon-trash: "\f1f8";
 @icon-display3: "\f26c";
 @icon-stop-circle: "\f28d";
