prefs:move icons for lang path include fixes #1251
(integrated from master branch change 12cefd3 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -464,3 +464,15 @@ checkbox#search-in-subdirs .checkbox-spacer-box
 {
     .icon-minus-square();
 }
+
+.list-item-up-icon
+{
+    .icon();
+    .icon-toggle-up();
+}
+
+.list-item-down-icon
+{
+    .icon();
+    .icon-toggle-down();
+}
