new tab: icons and layout fixes #1237
(integrated from master branch change 9e4e9b2 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -39,6 +39,13 @@
 .native-undo-icon { .icon(); .icon-undo2(); }
 .native-redo-icon { .icon(); .icon-redo2(); }
 .newtab-icon { font-size: 14px; .icon-plus(); }
+.new-file-icon { .icon(); .icon-file-plus2(); }
+.new-template-icon { .icon(); .icon-file-text()}
+.project-icon { .icon(); .icon-archive()}
+.open-file-icon { .icon(); .icon-folder-open2()}
+.open-workspace-icon{ .icon(); .icon-display3()}
+.preferences-icon { .icon();.icon-cog(); }
+.customize-panes-icon { .icon();.icon-th(); }
 .native-new-file-icon { .icon(); .icon-file-plus2(); }
 .native_open_icon { .icon(); .icon-folder-open(); }
 .native-save-icon { .icon(); .icon-save(); }
