--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?al0ymq');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?al0ymq#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?al0ymq') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?al0ymq') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?al0ymq#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ydar21');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ydar21#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ydar21') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ydar21') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ydar21#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -624,6 +624,11 @@
 .icon-map-signs {
     &:before {
         content: @icon-map-signs;
+    }
+}
+.icon-th {
+    &:before {
+        content: @icon-th;
     }
 }
 .icon-clock-o {
