--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -120,6 +120,7 @@
 @icon-clone: "\f24d";
 @icon-map-pin: "\f276";
 @icon-map-signs: "\f277";
+@icon-th: "\f00a";
 @icon-clock-o: "\f017";
 @icon-download: "\f019";
 @icon-refresh: "\f021";
