--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -357,4 +357,23 @@ ko-pane[type="icons"] tab
     height: 25px;
 }
 
+/* Quick Start */
+
+vbox[anonid="quickstart"] .inner > button
+{
+    width: 200px;
+    height: 25px;
+    padding-bottom: 2px;
+    margin: 3px;
+    .button-icon
+    {
+        margin-right:  6px;
+    }
+    
+    .box-inherit
+    {
+        width: 133px;
+    }
+}
+
 }
