UI: Fix continuous repaints
(integrated from master branch change 9.2.1-1324-g07eace2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -123,15 +123,19 @@
     }
 }
 
-#main-toolboxrow,
-#second-toolboxrow
+#main-toolboxrow
 {
-    width: ~"calc(50vw - 270px)";
+    width: 50vw;
+    margin-right: -200px;
+    padding-right: 200px;
 }
 
 #second-toolboxrow 
 {
     -moz-box-direction: reverse;
+    width: 50vw;
+    margin-left: -200px;
+    padding-left: 200px;
     
     & > hbox
     {
