UI: Reset margin/padding in classic toolbar mode
(integrated from master branch change 9.2.1-1330-geb63be1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/classic.toolbar.less
+++ b/src/chrome/komodo/skin/global/classic.toolbar.less
@@ -5,6 +5,8 @@
         -moz-box-ordinal-group: 0;
         width: auto !important;
         -moz-binding: unset !important;
+        margin-right: inherit !important;
+        padding-right: inherit !important;
     }
     
     #second-toolboxrow
@@ -12,6 +14,8 @@
         -moz-box-ordinal-group: 1;
         width: auto !important;
         -moz-binding: unset !important;
+        margin-left: inherit !important;
+        padding-left: inherit !important;
         
         spacer
         {
