--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -185,6 +185,7 @@
         background: @special;
         border: 0;
         margin: 0;
+        min-height: 100px;
         
         &:not(.has-results)
         {
