UI: Fix commando selection foreground color - fixes #1262
(integrated from master branch change 9.2.1-1332-ga15da42 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -205,6 +205,11 @@
             {
                 color: @foreground-special;
                 background: @contrast-special;
+                
+                label, description
+                {
+                    color: @foreground-special;
+                }
             }
             
             label, description
