ColorScheme Editor: Added the ability to add custom CSS
(integrated from master branch change 9.2.1-1345-g9949613 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -19,6 +19,7 @@
 @import url("chrome://komodo/skin/global/components/customize.less");
 
 @import url("resource://profile/classic.less");
+@import url("resource://profile/interfaceChrome.less");
 @import url("resource://profile/userChrome.less");
 
 /* Don't show new tab button on anything but the buffer tabs */
