UI: Load the userChrome and interfaceChrome separately from the global.less
So that they don't screw up the main interface

(integrated from master branch change 9.2.1-1347-g204285a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -1,9 +1,14 @@
+:root
+{
+  -moz-binding: url("chrome://komodo/content/bindings/windows.xml#root-element");
+}
+
 window:not(#komodo_main):not(.embedded).dialog
 {
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#window-chromeless");
 }
 
-dialog
+dialog, dialog:root
 {
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#dialog-chromeless");
 }
