Toolbar: Add focus mode button
(integrated from master branch change 0be436e by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -84,6 +84,7 @@ button, toolbarbutton, menuitem, tab
 #toggleLeftPane { .icon(); .icon-layout-left(); }
 #toggleRightPane { .icon(); .icon-layout-right(); }
 #toggleBottomPane { .icon(); .icon-layout-bottom(); }
+#toggleFocusMode { .icon(); .icon-eye3(); }
 .tabPicker-icon > .toolbarbutton-icon { .icon(); .icon-tab-down(); }
 .scc-button-menu { .icon(); .icon-menu2(); }
 .scc-button-checkout { .icon(); .icon-checkout(); }
