--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ydar21');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ydar21#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ydar21') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ydar21') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ydar21#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?rf9dfb');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?rf9dfb#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?rf9dfb') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?rf9dfb') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?rf9dfb#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -1109,6 +1109,16 @@
 .icon-npm {
     &:before {
         content: @icon-npm;
+    }
+}
+.icon-eye4 {
+    &:before {
+        content: @icon-eye4;
+    }
+}
+.icon-eye3 {
+    &:before {
+        content: @icon-eye3;
     }
 }
 .icon-scc {
