--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -217,5 +217,7 @@
 @icon-circle-code: "\eed3";
 @icon-terminal: "\eed4";
 @icon-npm: "\ef10";
+@icon-eye4: "\ecae";
+@icon-eye3: "\ecb4";
 @icon-scc: "\ef46";
 
