--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -17,6 +17,7 @@
 @import url("chrome://komodo/skin/global/components/scrolltabs.less");
 @import url("chrome://komodo/skin/global/components/scc.less");
 @import url("chrome://komodo/skin/global/components/customize.less");
+@import url("chrome://komodo/skin/global/components/languages.less");
 
 @import url("resource://profile/classic.less");
 
