UI: Fix menu's have no checkboxes/radio's
(integrated from master branch change 9.2.1-1381-g06dd5a9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -73,3 +73,8 @@ toolbarbutton[type="menu-button"].dynamic-button .toolbarbutton-menubutton-butto
 toolbarbutton[type="menu-button"].dynamic-button {
   -moz-binding: url('chrome://komodo/content/bindings/buttons.xml#dynamic-toolbarbutton-menu');
 }
+
+menuitem[type="checkbox"],
+menuitem[type="radio"] {
+  -moz-binding: url("chrome://komodo/content/bindings/menu.xml#menuitem-iconic");
+}
