UI: Hook up the font face/size variables
(integrated from master branch change 9.2.1-1382-gbd44cea by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -1,5 +1,9 @@
 @dark: 1;
 
+/* Yes these 2 are not colors, doesnt warrant a rename at this time */
+@font: 'Lucida Grande', 'Segoe UI', 'Droid Sans', 'Open Sans', sans-serif;
+@size: 0.9rem;
+
 /* Main Window */
 @background: #28282E;
 @foreground: #FFF;
