--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -150,8 +150,8 @@ menupopup
 
 *, ::-moz-tree-cell-text
 {
-    font-family: 'Lucida Grande', 'Segoe UI', 'Droid Sans', 'Open Sans', sans-serif;
-    font-size: 0.9rem;
+    font-family: @font;
+    font-size: @size;
 }
 
 /* Helpers */
