OpenFiles: Ensure close buttons are shown
(integrated from master branch change 9.2.1-1386-g3d59864 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/openfiles/skin/openfiles.p.less
+++ b/src/modules/openfiles/skin/openfiles.p.less
@@ -69,7 +69,7 @@
         toolbarbutton.file-close-button
         {
             visibility: hidden;
-            margin: 0 10px 0 0;
+            margin: 0 16px 0 0 !important;
             padding: 0;
         }
         
