Commando: Use textbox foreground for spinner color
(integrated from master branch change 9.2.1-1391-g08b65b9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -135,7 +135,7 @@
         visibility: collapse;
         opacity: 0;
         transition: 0.2s ease-in-out opacity;
-        .spinner(@contrast-special);
+        .spinner(@textbox-foreground-special);
         width: 24px;
     }
 
