Notify: Limit icon width
(integrated from master branch change 9.2.1-1392-g9c3fece by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -82,7 +82,9 @@
         min-width: 0 !important;
         width: 16px;
         height: 16px;
+        max-width: 16px;
         cursor: pointer;
+        background-size: contain;
 
         dropmarker
         {
